# cpp_neural_network

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
include/googletest/googlemock/include/gmock/: gmock-matchers.h
include/googletest/googletest/cmake/: internal_utils.cmake
include/googletest/googletest/docs/: advanced.md
include/googletest/googletest/src/: gtest.cc
